cookie fix (trouble with kazy loading v1.0) updated affiliate links and books section small css improvements lazy loading slider

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -101,7 +101,6 @@
     .author-meta a:hover { color: white !important; font-weight: bold !important; }
     
     article h2, article h3, article h4 { font-family: "Open Sans", sans-serif !important; font-weight: bolder !important; margin-top: 1.6em !important; outline: transparent; color: #242529 !important; }
-    article h2::before { content: '#'; color: #f4511e; font-weight: bold; font-size: 2.3rem !important; margin-right: 0.12em; opacity: 0.5; }
     
     article nav a { color: initial !important; }
     .nav-links .current { color: #f4511e !important; }
@@ -188,14 +187,14 @@
         Nasconde la X della coockie notification 
         .cn-close-icon { display: none; }
          */
-        .super-cookieConsentContainer { justify-content: center; width: 100%; position: fixed; bottom: 0px; display: none; z-index: 999; width: 100%; }
-        .cookieConsentContainer { width: auto; min-height: 20px; box-sizing: border-box; padding: 30px 30px 30px 30px; background: #262626EF; overflow: hidden; border-radius: 3px; margin: 1em auto; margin: 0 17.89%; }
-        @media (max-width: 980px) { .cookieConsentContainer { bottom: 0px !important; left: 1.5% !important; width: auto; margin: -2% -3.5% 3% 0; } }
+        .super-cookieConsentContainer {justify-content: center; width: 100%; position: fixed; bottom: 0px; display: none; z-index: 999; width: 100%; }
+        .cookieConsentContainer { width: auto; min-height: 20px; box-sizing: border-box; padding: 30px 30px 30px 30px; background: #262626EF; overflow: hidden; border-radius: 3px; margin: 1em 17.89%; }
+        @media (max-width: 980px) { .cookieConsentContainer {width: 95%; margin: -2% auto 2em   ; } }
         
         /*
          * SLIDER
          */
-        .slick-content { text-align: center; left: 0; top: 17em; position: absolute; width: 100%; }
+        .slick-content { text-align: center; left: 0; position: absolute; width: 100%; }
         .slick-title { font-size: 1.75em; color: #f8f8f8; width: 100%; padding: 0 15%; font-weight: 600; letter-spacing: 1px; }
         .slick-image { height: 40em !important; position: relative; filter: brightness(70%); }
         .slick-action-button { margin: 1.3em; }
@@ -376,7 +375,7 @@
         
         #site-header { margin-top: 0em; }
         #main, #title-info, #toggle-navigation, #site-footer { margin-top: 1em !important; }
-        .header-section-index .in-evidenza { margin-top: 0em; }
+        .header-section-index.in-evidenza { margin-top: 0em; }
         
         .dark-background .loop-container, .dark-background .main, .dark-background { background-color: #e8e8e8 !important; }
         .main { border-radius: 3px; }
@@ -411,6 +410,7 @@
         .entry-content img, .block-video-youtube, .block-video-vimeo, .itinerario-gmaps { left: 50% !important; margin-left: -50vw !important; margin-right: -50vw !important; max-width: 100vw !important; position: relative; right: 50% !important; width: 100vw !important; border: 0px; }
         .entry-content iframe { height: 400px !important; max-height: 100%; border: 0px; }
         
+        .post .entry-content:not(.not-p-big) article > p:nth-of-type(1):first-letter { float: left; font-size: 4.4em; line-height: .68; font-weight: 100; margin: .05em .1em 0 0; text-transform: uppercase; font-style: normal; }
     
         /**
          * VIDEO
@@ -496,8 +496,11 @@
 
             /**
              * SLIDER
-             *
-            .wpsisac-image-slide, .wpsisac-slide-wrap { height: 125vw !important; }
+             */
+            .slick-image { height: 30em !important; }
+            .slick-content { top: 38%; }
+            .slick-dots li button:before { font-size: 60px !important; }
+            /*.wpsisac-image-slide, .wpsisac-slide-wrap { height: 125vw !important; }
             * Imposta lo slider full-width 
             .wpsisac-slick-slider { left: 50%; margin-left: -50vw; margin-right: -50vw; max-width: 100vw; position: relative; right: 50%; width: 100vw; }
             
@@ -661,8 +664,9 @@
         .sidebar-after-post-content { width: 115% !important; text-align: left !important; margin-left: -4em; }
 
         .entry-header h1 { font-size: 3rem !important; }
-        article h2, article h3, article h4 { margin-left: 10.76% !important; }
+        article h2, article h3, article h4 { margin-left: 4.56% !important; }
         article h2 { font-size: 2.5rem !important; }
+        article h2::before { content: '#'; color: #f4511e; font-weight: bold; font-size: 2.3rem !important; margin-right: 0.12em; opacity: 0.5; margin-left: -0.729em; }
         article h3 { font-size: 2rem !important; }
         article h4 { font-size: 1.5rem !important; }
         .widget_widget_crp { padding-left: 1.2em; }
@@ -676,17 +680,8 @@
         .entry-content .block-image, .entry-content .block-video-youtube { box-shadow: none; padding: 0; }
         
         article p, article ul { color: #3b3d44; } 
-
     
-        .post .entry-content:not(.not-p-big) article > p:nth-of-type(1):first-letter {
-        float: left;
-        font-size: 8.4em;
-        line-height: .68;
-        font-weight: 100;
-        margin: .05em .1em 0 0;
-        text-transform: uppercase;
-        font-style: normal;
-        }
+        .post .entry-content:not(.not-p-big) article > p:nth-of-type(1):first-letter { float: left; font-size: 8.4em; line-height: .68; font-weight: 100; margin: .05em .1em 0 0; text-transform: uppercase; font-style: normal; }
         
         /**
          * PLUGINS
@@ -705,7 +700,13 @@
             /**
              * INDICE
              */
-            #toc-container { margin-left: 4.56%; }        
+            #toc-container { margin-left: 4.56%; } 
+            
+            /**
+             * SLIDER
+             */
+            .slick-image { height: 40em !important; }
+            .slick-content { top: 38%; }
             
             /**
              * SCROLL TO TOP BUTTON
